services/payment-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    tier: backend
spec:
  type:  ClusterIP
  selector:
    app: payment
  ports:
    - port: 80
      targetPort: 8989
